`default-remote` fixes/aliases

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -6,6 +6,7 @@ alias gael="g ael"
 alias gage="g age"
 alias gagi="g agi"
 alias gaps="g aps"
+alias gcdr="g cdr"
 alias gcf="g cf"
 alias gcg="g cg"
 alias gcfa="g cfa"
@@ -59,6 +60,7 @@ alias gcgdb="g cgdb"
 alias gdbm="g dbm"
 alias ggdb="g gdb"
 alias ggdbm="g gdbm"
+alias ggdr="g gdr"
 alias ggue="g gue"
 alias ggun="g gun"
 
