--- a/remote/.git-rc
+++ b/remote/.git-rc
@@ -1,38 +1,41 @@
 #!/usr/bin/env bash
 
+defn gamr g amr
+defn gcd g cd
 defn gdfr g dfr
+defn gdrt g drt
 defn gfnr g fnr
+defn ggru g gru
+defn ggu g gu
 defn gir g ir
+defn glgp g lgp
+defn glpr g lpr
+defn gmr g mr
 defn gr g r
-defn grv g rv
+defn gr0 g r0
 defn gra g ra
 defn grao g rao
 defn grah g rah
 defn gras g ras
 defn grat g rat
 defn grau g rau
+defn grcp g rcp
 defn gre g re
 defn grgh g rgh
-defn gcd g cd
-defn glgp g lgp
-defn glpr g lpr
-defn gmr g mr
-defn gup g up
-defn gamr g amr
-defn grcp g rcp
 defn grgu g rgu
 defn grmp g rmp
 defn grmpe g rmpe
-defn ggu g gu
 defn grr g rr
+defn grshw g rshw
+defn grv g rv
 defn grmv g rmv
 defn grrm g rrm
 defn grsh g rsh
 defn grsha g rsha
 defn grsu g rsu
 defn gruh g ruh
-defn ggru g gru
 defn gsru g sru
+defn gup g up
 
 defn glsr g lsr
 defn glsrh g lsrh
