`symbolic-ref` aliases

--- a/rev-list/.git-rc
+++ b/rev-list/.git-rc
@@ -18,3 +18,9 @@ alias gprnts="g prnts"
 
 alias grtc="g rtc"
 alias grtch="g rtch"
+
+alias gsyq="g syq"
+alias gsyr="g syr"
+alias gsys="g sys"
+alias gsysq="g sysq"
+alias gssq="g ssq"
