--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 
 alias gd="g d"
+alias gdcq="g dcq"
 alias gdd="g dd"
 alias gdsd="g dsd"
 alias gdl="g dl"
@@ -35,6 +36,7 @@ alias gdp2="g dp2"
 alias gdph="g dph"
 alias gdps="g dps"
 alias gdq="g dq"
+alias gdqc="g dqc"
 alias gds="g ds"
 alias gdcs="g dcs"
 alias gdsc="g dsc"
