`gnd="git --no-pager diff"` aliases

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -70,7 +70,7 @@ alias gicc="g icc"
 alias gid="g id"
 alias gidc="g idc"
 
-alias gnd="gn diff"
-alias gndc="gn diff --cached"
-alias gndh="gn diff HEAD"
-alias gdnom="git diff --name-only master"
+alias gnd="g nd"
+alias gndc="g ndc"
+alias gndh="g ndh"
+alias gndn="g ndn"
