`rhp2 = reset --hard HEAD~2`

--- a/reset/.git-rc
+++ b/reset/.git-rc
@@ -9,6 +9,7 @@ alias grh="g rh"
 alias grh1="g rh1"
 alias grhh="g rhh"
 alias grhp="g rhp"
+alias grhp2="g rhp2"
 alias grs="g rs"
 alias grrs="g rrs"
 alias grsf="g rsf"
