--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -3,6 +3,7 @@ alias grhsl="g rhsl"
 alias gsac="g sac"
 alias gsaca="g saca"
 alias gsaf="g saf"
+alias gscc="g scc"
 alias gsm="g sm"
 alias gsma="g sma"
 alias gsmac="g smac"
