`submodule-auto-commit` improvements
nicer commit msgs, `-n` dry-run mode

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -2,6 +2,8 @@ alias gps="g ps"
 alias grhsl="g rhsl"
 alias gsac="g sac"
 alias gsaca="g saca"
+alias gsacan="g sacan"
+alias gsacn="g sacn"
 alias gsaf="g saf"
 alias gscc="g scc"
 alias gsm="g sm"
