`git-submodule-auto-commit`: `-m` (print msg only)

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -2,7 +2,10 @@ alias gps="g ps"
 alias grhsl="g rhsl"
 alias gsac="g sac"
 alias gsaca="g saca"
+alias gsacam="g sacam"
 alias gsacan="g sacan"
+alias gsacm="g sacm"
+alias gsacn="g sacn"
 alias gsacn="g sacn"
 alias gsaf="g saf"
 alias gscc="g scc"
