--- a/submodule/.gitconfig
+++ b/submodule/.gitconfig
@@ -3,7 +3,9 @@
   rhsl  = rebase-head-submodule-log
   sac   = submodule-auto-commit
   saca  = submodule-auto-commit -a
+  sacam = submodule-auto-commit -am
   sacan = submodule-auto-commit -an
+  sacm  = submodule-auto-commit -m
   sacn  = submodule-auto-commit -n
   saf   = submodule add -f
   sm    = submodule
