`cmfn = commit -F- --amend`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -30,7 +30,9 @@ alias gcmab="g cmab"
 alias gcmb="g cmb"
 alias gcmba="g cmba"
 alias gcmf="g cmf"
+alias gcmfn="g cmfn"
 alias gcmfa="g cmfa"
+alias gcmfan="g cmfan"
 alias gcmp="g cmp"
 alias gcmt="g cmt"
 alias gcmtf="g cmtf"
