--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -5,6 +5,7 @@ alias gsaca="g saca"
 alias gsacam="g sacam"
 alias gsacan="g sacan"
 alias gsacm="g sacm"
+alias gsacmr="g sacmr"
 alias gsacn="g sacn"
 alias gsacn="g sacn"
 alias gsaf="g saf"
