`cnne  = commit --amend --no-edit`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -43,6 +43,7 @@ alias gcnb="g cnb"
 alias gcne="g cne"
 alias gcnf="g cnf"
 alias gcnm="g cnm"
+alias gcnne="g cnne"
 alias gcam="g cam"
 alias gcan="g can"
 alias gcane="g cane"
