update `gdxcr` aliases for qmdx==0.0.4 (containing `-R/--ref` opt)

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -55,8 +55,12 @@ alias gdwc="g dwc"
 alias gdx="g dx"
 alias gdxc="g dxc"
 alias gdxcr="g dxcr"
+alias gdxcrr="g dxcrr"
 alias gdxr="g dxr"
+alias gdxrr="g dxrr"
 alias gdxw="g dxw"
+alias gdxwr="g dxwr"
+alias gdxwrr="g dxwrr"
 
 alias gd-="g d-"
 alias gdw-="g dw-"
