`diff --exit-code/--quiet` aliases

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -3,6 +3,10 @@
 alias gd="g d"
 alias gdcq="g dcq"
 alias gdd="g dd"
+alias gde="g de"
+alias gdeq="g deq"
+alias gdex="g dex"
+alias gdqe="g dqe"
 alias gdsd="g dsd"
 alias gdl="g dl"
 alias gdsl="g dsl"
