`sss = git-submodule-set-sha`

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -33,6 +33,7 @@ alias gsmf="g smf"
 alias gsrl="g srl"
 alias gsrlv="g srlv"
 alias gssh="g ssh"
+alias gsss="g sss"
 alias gsst="g sst"
 alias gsmr="g smr"
 alias gsmrs="g smrs"
