`smab = submodule add -b`

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -12,6 +12,7 @@ alias gsaf="g saf"
 alias gscc="g scc"
 alias gsm="g sm"
 alias gsma="g sma"
+alias gsmab="g smab"
 alias gsmac="g smac"
 alias gsmaf="g smaf"
 alias gsmc="g smc"
