`eca = edit-commit -a`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -12,6 +12,7 @@ alias gdth="g dth"
 alias gdthc="g dthc"
 
 alias gec="g ec"
+alias geca="g eca"
 alias gecn="g ecn"
 alias gecnp="g ecnp"
 alias gecnx="g ecnx"
