`reset` aliases: `rsh1 = reset HEAD@{1}`, etc.

--- a/reset/.git-rc
+++ b/reset/.git-rc
@@ -1,15 +1,19 @@
 #!/usr/bin/env bash
 
-alias grsp="g rsp"
 alias gr.="g reset ."
-alias grs.="g reset ."
-alias grss="g rss"
-alias grp="g rp"
 alias grh="g rh"
 alias grh1="g rh1"
 alias grhh="g rhh"
 alias grhp="g rhp"
 alias grhp2="g rhp2"
+alias grp="g rp"
 alias grs="g rs"
 alias grrs="g rrs"
 alias grsf="g rsf"
+alias grs.="g reset ."
+alias grsh1="g rsh1"
+alias grsh2="g rsh2"
+alias grsp="g rsp"
+alias grsp2="g rsp2"
+alias grsp3="g rsp3"
+alias grss="g rss"
