`show HEAD@\{{1,2}\}` aliases

--- a/show/.git-rc
+++ b/show/.git-rc
@@ -7,6 +7,8 @@ alias gnshs="g nshs"
 alias gsadr="g sadr"
 alias gsard="g sard"
 alias gsh="g sh"
+alias gsh1="g sh1"
+alias gsh2="g sh2"
 alias gshmr="g shmr"
 alias gshms="g shms"
 alias gshno="g shno"
