--- a/show/.gitconfig
+++ b/show/.gitconfig
@@ -3,6 +3,8 @@
   nsh = !git --no-pager show
   nshs = !git --no-pager show
   sh = show
+  sh1 = show HEAD@{1}
+  sh2 = show HEAD@{2}
   shmr = show --diff-merges=remerge
   shms = show --diff-merges=separate
   shno = show --name-only
