--- a/push/.git-rc
+++ b/push/.git-rc
@@ -15,6 +15,9 @@ alias gpdu="g pdu"
 alias gpdug="g pdug"
 alias gpf="g pf"
 alias gpfn="g pfn"
+alias gpgc="g pgc"
+alias gpgcc="g pgcc"
+alias gpgcu="g pgcu"
 alias gpl="g pl"
 alias gpnf="g pnf"
 alias gptf="g ptf"
