`rebase-stdin` -> `rebase-noninteractive`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -55,18 +55,15 @@ alias grbori="g rbori"
 alias grbot="g rbot"
 alias grbp="g rbp"
 alias rbo="g rbo"
-alias grbs="g rbs"
-alias grbsi="g rbsi"
-alias grbsin="g rbsin"
 alias grio="g rio"
 alias grlrb="g rlrb"
 alias grn="g rn"
+alias grni="g rni"
+alias grnin="g rnin"
 alias gro="g ro"
 alias grri="g rri"
 alias grrio="g rrio"
 alias grro="g rro"
-alias grsi="g rsi"
-alias grsin="g rsin"
 alias grbu="g rbu"
 alias grbud="g rbud"
 alias grud="g rud"
