--- a/rebase/.gitconfig
+++ b/rebase/.gitconfig
@@ -38,10 +38,8 @@
   rebase-dag = rebase-dag.py
   rbd     = rebase-dag.py
   rbi     = rebase-inline
-  rbsi    = rebase-stdin
-  rbsin   = rebase-stdin -n
-  rsi     = rebase-stdin
-  rsin    = rebase-stdin -n
+  rni    = rebase-noninteractive
+  rnin   = rebase-noninteractive -n
   rbb     = rebase-branches
   rbm     = rebase-head-message
   rbmb    = rebase-merge-base
