`dnp = config diff.noprefix` and similar

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -40,6 +40,10 @@ alias gcfda="g cfda"
 alias gcgda="g cgda"
 alias gcfua="g cfua"
 alias gcgua="g cgua"
+alias gdnp="g dnp"
+alias gdnpg="g dnpg"
+alias gdnpgt="g dnpgt"
+alias gdnpt="g dnpt"
 alias ge="g e"
 alias gea="g ea"
 alias gggi="g ggi"
