`dhw  = diff -w HEAD`

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -27,6 +27,7 @@ alias gdgif="g dgif"
 alias gdh="g dh"
 alias gdh1="g dh1"
 alias gdh2="g dh2"
+alias gdhw="g dhw"
 alias gdj="g dj"
 alias gdn="g dn"
 alias gdno="g dno"
@@ -56,6 +57,7 @@ alias gdtp="g dtp"
 alias gdu="g du"
 alias gdw="g dw"
 alias gdwc="g dwc"
+alias gdwh="g dwh"
 alias gdx="g dx"
 alias gdxc="g dxc"
 alias gdxcr="g dxcr"
