`edit-commit` improvements

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -12,11 +12,12 @@ alias gdth="g dth"
 alias gdthc="g dthc"
 
 alias gec="g ec"
-alias geca="g eca"
+alias gecm="g ecm"
 alias gecn="g ecn"
 alias gecnp="g ecnp"
 alias gecnx="g ecnx"
 alias gecp="g ecp"
+alias gecpm="g ecpm"
 alias gecr="g ecr"
 alias gecrn="g ecrn"
 alias gecrp="g ecrp"
