add `gcgdr` (`config --global clone.defaultRemoteName`) alias

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -63,6 +63,7 @@ alias gfue="g fue"
 alias gfun="g fun"
 alias gfune="g fune"
 alias gcgdb="g cgdb"
+alias gcgdr="g cgdr"
 alias gdbm="g dbm"
 alias ggdb="g gdb"
 alias ggdbm="g gdbm"
