`show-{rebase,cherry-pick}-{head-parent}` aliases

--- a/cherry-pick/.git-rc
+++ b/cherry-pick/.git-rc
@@ -12,7 +12,14 @@ alias gcppcd="g cppcd"
 alias gcps="g cps"
 alias gacpc="g acpc"
 alias gcpsh="g cpsh"
+alias gsch="g sch"
+alias gscp="g scp"
+alias gscpw="g scpw"
+alias gscw="g scw"
+alias gshc="g shc"
 alias gshch="g shch"
+alias gshcp="g shcp"
+alias gshcw="g shcw"
 alias gshwc="g shwc"
 alias gshwch="g shwch"
 alias gswc="g swc"
