--- a/cherry-pick/.gitconfig
+++ b/cherry-pick/.gitconfig
@@ -10,8 +10,15 @@
   cpn  = cherry-pick -n
   cppcd = cherry-pick-preserve-commit-date
   cps  = cherry-pick --skip
-  cpsh = cherry-pick-show-head
-  shch = cherry-pick-show-head
-  shwc = cherry-pick-show-head -w
-  shwch = cherry-pick-show-head -w
-  swc = cherry-pick-show-head -w
+  cpsh = show-cherry-pick-head
+  sch  = show-cherry-pick-head
+  scp  = show-cherry-pick-parent
+  scpw = show-cherry-pick-parent -w
+  scw  = show-cherry-pick-head -w
+  shc  = show-cherry-pick-head
+  shch = show-cherry-pick-head
+  shcp = show-cherry-pick-parent
+  shcw = show-cherry-pick-head -w
+  shwc = show-cherry-pick-head -w
+  shwch = show-cherry-pick-head -w
+  swc = show-cherry-pick-head -w
