--- a/config/.git-rc
+++ b/config/.git-rc
@@ -74,7 +74,7 @@ alias ggun="g gun"
 alias gsdbm="g sdbm"
 alias gsdr="g sdr"
 alias gsdru="g sdru"
-alias gshc="g shc"
+alias gsshc="g sshc"
 
 alias gue="g ue"
 alias gun="g un"
