--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -101,9 +101,16 @@ alias gshoc="g shoc"
 alias gshon="g shon"
 alias gshmh="g shmh"
 alias gshoh="g shoh"
+alias gshr="g shr"
 alias gshrh="g shrh"
 alias gshrm="g shrm"
+alias gshrp="g shrp"
+alias gshrw="g shrw"
 alias gsqsq="g sqsq"
+alias gsrh="g srh"
+alias gsrp="g srp"
+alias gsrpw="g srpw"
+alias gsrw="g srw"
 alias gswr="g swr"
 
 alias gtw="g tw"
