`ftf  = fetch-x --tags -f`

--- a/fetch/.git-rc
+++ b/fetch/.git-rc
@@ -9,6 +9,7 @@ alias gfd2="g fd2"
 alias gfd3="g fd3"
 alias gff="g ff"
 alias gft="g ft"
+alias gftf="g ftf"
 alias gfa="g fa"
 alias gfta="g fta"
 alias gfo="g fo"
