`ptfn = push --tags -f -n`

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -21,6 +21,7 @@ alias gpgcu="g pgcu"
 alias gpl="g pl"
 alias gpnf="g pnf"
 alias gptf="g ptf"
+alias gptfn="g ptfn"
 alias gpfo="g pfo"
 alias gpft="g pft"
 alias gpftn="g pftn"
