--- a/config/.git-rc
+++ b/config/.git-rc
@@ -9,6 +9,7 @@ alias gage="g age"
 alias gagi="g agi"
 alias gaps="g aps"
 alias gcdr="g cdr"
+alias gcef="g cef"
 alias gcf="g cf"
 alias gcg="g cg"
 alias gcfa="g cfa"
