`cds  = config diff.submodule` and similar

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -8,6 +8,14 @@ alias gage="g age"
 alias gagi="g agi"
 alias gaps="g aps"
 alias gcdr="g cdr"
+alias gcds="g cds"
+alias gcdsd="g cdsd"
+alias gcdsl="g cdsl"
+alias gcgds="g cgds"
+alias gcgdsd="g cgdsd"
+alias gcgdsl="g cgdsl"
+alias gcgsd="g cgsd"
+alias gcgsl="g cgsl"
 alias gcef="g cef"
 alias gcf="g cf"
 alias gcg="g cg"
