`smurrr = submodule update --recursive --rebase --remote`

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -53,6 +53,7 @@ alias gsmur="g smur"
 alias gsmurf="g smurf"
 alias gsmurq="g smurq"
 alias gsmurr="g smurr"
+alias gsmurrr="g smurrr"
 alias gsmus="g smus"
 alias gsu="g su"
 alias gsuf="g suf"
