`cfaf = config core.attributesfile`

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -20,7 +20,9 @@ alias gcef="g cef"
 alias gcf="g cf"
 alias gcg="g cg"
 alias gcfa="g cfa"
+alias gcfaf="g cfaf"
 alias gcga="g cga"
+alias gcgaf="g cgaf"
 alias gcfd="g cfd"
 alias gcgd="g cgd"
 alias gcfi="g cfi"
@@ -54,6 +56,7 @@ alias gdnpgt="g dnpgt"
 alias gdnpt="g dnpt"
 alias ge="g e"
 alias gea="g ea"
+alias ggaf="g gaf"
 alias gggi="g ggi"
 
 alias grcp="g rcp"
