`include.path`, `core.excludesfile` aliases

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -58,6 +58,10 @@ alias ge="g e"
 alias gea="g ea"
 alias ggaf="g gaf"
 alias gggi="g ggi"
+alias ggif="g gif"
+alias ggig="g gig"
+alias gfip="g fip"
+alias ggip="g gip"
 
 alias grcp="g rcp"
 
