More `include.path` / `core.excludesfile` aliases

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -17,8 +17,17 @@ alias gcgdsl="g cgdsl"
 alias gcgsd="g cgsd"
 alias gcgsl="g cgsl"
 alias gcef="g cef"
+alias gcefa="g cefa"
 alias gcf="g cf"
 alias gcg="g cg"
+alias gip="g ip"
+alias gipa="g ipa"
+alias gipu="g ipu"
+alias gcu="g cu"
+alias gcua="g cua"
+alias gcug="g cug"
+alias gcuga="g cuga"
+alias gcgg="g cgg"
 alias gcfa="g cfa"
 alias gcfaf="g cfaf"
 alias gcga="g cga"
@@ -35,7 +44,6 @@ alias gcgif="g cgif"
 alias gcgig="g cgig"
 alias gcgigs="g cgigs"
 alias gcgef="g cgef"
-alias gcgefs="g cgefs"
 alias gcfis="g cfis"
 alias gcgis="g cgis"
 alias gcfia="g cfia"
@@ -56,12 +64,23 @@ alias gdnpgt="g dnpgt"
 alias gdnpt="g dnpt"
 alias ge="g e"
 alias gea="g ea"
+alias gef="g ef"
+alias gefa="g efa"
 alias ggaf="g gaf"
 alias gggi="g ggi"
 alias ggif="g gif"
 alias ggig="g gig"
 alias gfip="g fip"
 alias ggip="g gip"
+
+alias gif="g if"
+alias gifa="g ifa"
+alias ggcf="g gcf"
+alias ggcfa="g gcfa"
+alias ggef="g gef"
+alias ggefa="g gefa"
+alias gxf="g xf"
+alias gxfa="g xfa"
 
 alias grcp="g rcp"
 
