`rft = register-file-type`

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -81,6 +81,8 @@ alias ggef="g gef"
 alias ggefa="g gefa"
 alias gxf="g xf"
 alias gxfa="g xfa"
+alias grft="g rft"
+alias grtg="g rtg"
 
 alias grcp="g rcp"
 
