`efu = config --global --unset-all core.excludesfile`

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -18,6 +18,7 @@ alias gcgsd="g cgsd"
 alias gcgsl="g cgsl"
 alias gcef="g cef"
 alias gcefa="g cefa"
+alias gcefu="g cefu"
 alias gcf="g cf"
 alias gcg="g cg"
 alias gip="g ip"
@@ -66,6 +67,7 @@ alias ge="g e"
 alias gea="g ea"
 alias gef="g ef"
 alias gefa="g efa"
+alias gefu="g efu"
 alias ggaf="g gaf"
 alias gggi="g ggi"
 alias ggif="g gif"
