`config-diff-command`

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -7,10 +7,14 @@ alias gael="g ael"
 alias gage="g age"
 alias gagi="g agi"
 alias gaps="g aps"
+alias gcdc="g cdc"
+alias gcdcg="g cdcg"
 alias gcdr="g cdr"
 alias gcds="g cds"
 alias gcdsd="g cdsd"
 alias gcdsl="g cdsl"
+alias gcdt="g cdt"
+alias gcdtg="g cdtg"
 alias gcgds="g cgds"
 alias gcgdsd="g cgdsd"
 alias gcgdsl="g cgdsl"
